# digital-design-dataset

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.software  Makefile  README.md  environment.yaml  pyproject.toml  test.v  test_new.v
demo_scripts/: .gitignore  __init__.py  analyze_hashing.py  build_dataset_comprehensive.py  build_design_dataset.ipynb  dataset_report.py  decomp_analysis.py  llm_token_analysis.py  token_count_external.py  vis_sources.py
demo_scripts/figures/: verilog_ast_tree.dot
demo_scripts/output/: decomp_analysis.json  github_fusesoc_cores_search.json  module_hashes.csv  token_count.csv  token_counts_verigen.json
demo_scripts/wip/: aig_tests.v  build_design_database.py  build_verilog_tokenizer.py  counter.v  demo.py  extract_design_hierarchy.ipynb  github_search.ipynb  test_embedding.py  test_fusesoc.py  test_verilog_aig.py  test_verilog_ast.ipynb  test_verilog_ast.py  test_verilog_synth_xilinx.py
digital_design_dataset/: __init__.py  design_dataset.py  logger.py  utils.py
digital_design_dataset/data_sources/: data_retrievers.py  github_fast_downloader.py  github_scraper.py  hls_data.py
digital_design_dataset/data_sources/fsm/: fsm.py
digital_design_dataset/dataset/: datasets.py  fusesoc.py  github_scraper.py
digital_design_dataset/flows/: clock_detect.py  connectivity_table.py  decompose.py  design_hierarchy.py  flow_ise.py  flow_openroad.py  flow_quartus.py  flow_tools.py  flows.py  verilog_ast.py  yosys_aig.py  yosys_synth_intel.py  yosys_synth_lattice.py  yosys_synth_xilinx.py
digital_design_dataset/flows/quartus/: flow_quartus.py
digital_design_dataset/flows/vivado/: flow_vivado.py
digital_design_dataset/flows/yosys/: yosys_user_defined.py
digital_design_dataset/tui_app/: style.tcss  tui_app.py
tests/: blif_test_ckt.blif  flow.tcl  test_clock_detect.py  test_dataset_retrivers.py  test_decompose.py  test_flow_quartus.py  test_flow_xilinx.py  test_flows_yosys.py  test_github_fast_downloader.py  utils.py
tests/test_designs/hdesign_0/: design.v
tests/test_designs/hdesign_1/: a.v  b.v  c.v
tests/test_designs/hdesign_2/: bc.v  d.v
tests/test_designs/hdesign_3/: design.v
