[project]
name = "digital-design-dataset"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stefan Abi-Karam", email = "stefanabikaram@gatech.edu" }]
keywords = [
    "FPGA",
    "Electronic Design Automation",
    "VLSI",
    "Verilog",
    "VHDL",
    "Digital Design",
]
classifiers = []
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
docs = ["sphinx", "furo", "sphinx-autodoc-typehints"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/stefanpie/digital-design-dataset?tab=readme-ov-file"
"Repository" = "https://github.com/stefanpie/digital-design-dataset?tab=readme-ov-file"
"Documentation" = "https://github.com/stefanpie/digital-design-dataset?tab=readme-ov-file"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["digital_design_dataset"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-s",
    "-v",
    # "--cov=digital_design_dataset",
    # "--cov-report=html",
    # "--cov-append"
]
log_cli = true
pytest_plugins = ["pytest_cov"]


[tool.ruff]
line-length = 120
preview = true
exclude = ["*.ipynb"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",
    "D",
    "FIX",
    "TD",
    "TRY003",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "RET504",
    "E266",
    "PERF401",
    "S404",
    "S603",
    "S607",
    "PLR0914",
    "G004",
]

[tool.mypy]
ignore_missing_imports = true
