[project]
name = "digital-design-dataset"
version = "0.0.1"
readme = "README.md"
license = "BSD-3-Clause AND CC-BY-4.0"
license-files = ["LICENSE", "LICENSE.software", "LICENSE.data"]
authors = [{ name = "Stefan Abi-Karam", email = "stefanabikaram@gatech.edu" }]
keywords = [
    "FPGA",
    "Electronic Design Automation",
    "VLSI",
    "Verilog",
    "VHDL",
    "Digital Design",
]
classifiers = []
requires-python = ">=3.12"


dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "seaborn",
    "jupyter",
    "pygithub",
    "py7zr",
    "tqdm",
    "joblib",
    "python-dotenv",
]

[project.optional-dependencies]
docs = ["sphinx", "furo", "sphinx-autodoc-typehints"]
test = ["pytest"]
dev = ["ruff", "mypy"]

[project.urls]
"Homepage" = "https://github.com/stefanpie/digital-design-dataset"
"Repository" = "https://github.com/stefanpie/digital-design-dataset"
"Documentation" = "https://github.com/stefanpie/digital-design-dataset"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["digital_design_dataset"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-s",
    "-v",
    # "--cov=digital_design_dataset",
    # "--cov-report=html",
    # "--cov-append"
]
log_cli = true
pytest_plugins = ["pytest_cov"]


[tool.ruff]
line-length = 120
preview = true
exclude = ["*.ipynb"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",
    "D",
    "FIX",
    "TD",
    "TRY003",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "RET504",
    "E266",
    "PERF401",
    "S404",
    "S603",
    "S607",
    "PLR0914",
    "G004",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "T201", "ANN201"]


[tool.mypy]
ignore_missing_imports = true
